--- a/css/cayman.css
+++ b/css/cayman.css
@@ -10,7 +10,7 @@ body {
   color: #606c71; }
 
 a {
-  color: #1e6bb8;
+  color: #FFC0CB;
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
